Added small text to the index file.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <div style="background-color: red;">
             <button onclick="presionarOjeteNegro('yuli') ">ojete tu hermana</button>
     </div>
+    <div style="background-color: aquamarine; display: inline flow-root list-item; border-radius: 25px;">
+        <p>
+            hola soy un cambio hecho por otra persona
+        </p>
+    </div>
 </body>
 <script>
     var contador=0
