--- a/index.html
+++ b/index.html
@@ -3,16 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">   <title>Document</title>
 </head>
 <body>
-    <div style="background-color: red;">
+    <div style="background-color: red; display: inline flow-root list-item;">
             <button onclick="presionarOjeteNegro('yuli') ">ojete tu hermana</button>
     </div>
-    <div style="background-color: aquamarine; display: inline flow-root list-item; border-radius: 25px;">
+    <div style="background-color: #2be28cd6; display: inline flow-root list-item; border-radius: 25px;">
         <p>
             hola soy un cambio hecho por otra persona
         </p>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+    </div>
+
+    <div class="row">
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+    </div>
+
+    <div class="row">
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+    </div>
+
+    <div class="row">
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
+        <div class="col"><button> val</button></div>
     </div>
 </body>
 <script>
